Homeworks/Hw5/completedCode/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_GLOB_ITEM_LIST

    2 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM
    3                  | NT_GLOB_ITEM NT_GLOB_ITEM_LIST

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    5             | TM_STRUCT TM_IDENT TM_SEMICOL
    6             | TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    7             | TM_UNION TM_IDENT TM_SEMICOL
    8             | TM_ENUM TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL
    9             | TM_ENUM TM_IDENT TM_SEMICOL
   10             | TM_TYPEDEF NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL
   11             | NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

   12 NT_ENUM_ELE_LIST: TM_IDENT
   13                 | TM_IDENT TM_COMMA NT_ENUM_ELE_LIST

   14 NT_LEFT_TYPE: TM_IDENT
   15             | TM_STRUCT TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   16             | TM_STRUCT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   17             | TM_STRUCT TM_IDENT
   18             | TM_UNION TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   19             | TM_UNION TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   20             | TM_UNION TM_IDENT
   21             | TM_ENUM TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   22             | TM_ENUM TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   23             | TM_ENUM TM_IDENT
   24             | TM_INT
   25             | TM_CHAR

   26 NT_NAMED_RIGHT_TYPE_EXPR: TM_DEREF NT_NAMED_RIGHT_TYPE_EXPR
   27                         | TM_LEFT_PAREN NT_NAMED_RIGHT_TYPE_EXPR TM_RIGHT_PAREN
   28                         | TM_IDENT
   29                         | NT_NAMED_RIGHT_TYPE_EXPR TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   30                         | NT_NAMED_RIGHT_TYPE_EXPR NT_PACKED_ARGUEMENT_TYPE_LIST

   31 NT_ANNON_RIGHT_TYPE_EXPR: TM_LEFT_PAREN NT_ANNON_RIGHT_TYPE_EXPR TM_RIGHT_PAREN
   32                         | TM_DEREF NT_ANNON_RIGHT_TYPE_EXPR
   33                         | TM_DEREF
   34                         | NT_ANNON_RIGHT_TYPE_EXPR TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   35                         | TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   36                         | NT_ANNON_RIGHT_TYPE_EXPR NT_PACKED_ARGUEMENT_TYPE_LIST
   37                         | NT_PACKED_ARGUEMENT_TYPE_LIST

   38 NT_FIELD_LIST: /* empty */
   39              | NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST

   40 NT_PACKED_ARGUEMENT_TYPE_LIST: TM_LEFT_PAREN NT_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   41 NT_ARGUMENT_TYPE_LIST: /* empty */
   42                      | NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR TM_COMMA NT_ARGUMENT_TYPE_LIST
   43                      | NT_LEFT_TYPE TM_COMMA NT_ARGUMENT_TYPE_LIST
   44                      | NT_LEFT_TYPE NT_ANNON_RIGHT_TYPE_EXPR
   45                      | NT_LEFT_TYPE


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 29 34 35
TM_IDENT (259) 4 5 6 7 8 9 12 13 14 15 17 18 20 21 23 28
TM_LEFT_BRACE (260) 4 6 8 15 16 18 19 21 22
TM_RIGHT_BRACE (261) 4 6 8 15 16 18 19 21 22
TM_LEFT_PAREN (262) 27 31 40
TM_RIGHT_PAREN (263) 27 31 40
TM_LEFT_SQUARE (264) 29 34 35
TM_RIGHT_SQUARE (265) 29 34 35
TM_COMMA (266) 13 42 43
TM_DEREF (267) 26 32 33
TM_SEMICOL (268) 4 5 6 7 8 9 10 11 39
TM_STRUCT (269) 4 5 15 16 17
TM_INT (270) 24
TM_CHAR (271) 25
TM_UNION (272) 6 7 18 19 20
TM_ENUM (273) 8 9 21 22 23
TM_TYPEDEF (274) 10


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
NT_WHOLE (21)
    on left: 1, on right: 0
NT_GLOB_ITEM_LIST (22)
    on left: 2 3, on right: 1 3
NT_GLOB_ITEM (23)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
NT_ENUM_ELE_LIST (24)
    on left: 12 13, on right: 8 13 21 22
NT_LEFT_TYPE (25)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25, on right: 10 11 39
    42 43 44 45
NT_NAMED_RIGHT_TYPE_EXPR (26)
    on left: 26 27 28 29 30, on right: 10 11 26 27 29 30 39
NT_ANNON_RIGHT_TYPE_EXPR (27)
    on left: 31 32 33 34 35 36 37, on right: 31 32 34 36 42 44
NT_FIELD_LIST (28)
    on left: 38 39, on right: 4 6 15 16 18 19 39
NT_PACKED_ARGUEMENT_TYPE_LIST (29)
    on left: 40, on right: 30 36 37
NT_ARGUMENT_TYPE_LIST (30)
    on left: 41 42 43 44 45, on right: 40 42 43


state 0

    0 $accept: . NT_WHOLE $end

    TM_IDENT    shift, and go to state 1
    TM_STRUCT   shift, and go to state 2
    TM_INT      shift, and go to state 3
    TM_CHAR     shift, and go to state 4
    TM_UNION    shift, and go to state 5
    TM_ENUM     shift, and go to state 6
    TM_TYPEDEF  shift, and go to state 7

    NT_WHOLE           go to state 8
    NT_GLOB_ITEM_LIST  go to state 9
    NT_GLOB_ITEM       go to state 10
    NT_LEFT_TYPE       go to state 11


state 1

   14 NT_LEFT_TYPE: TM_IDENT .

    $default  reduce using rule 14 (NT_LEFT_TYPE)


state 2

    4 NT_GLOB_ITEM: TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    5             | TM_STRUCT . TM_IDENT TM_SEMICOL
   15 NT_LEFT_TYPE: TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   16             | TM_STRUCT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   17             | TM_STRUCT . TM_IDENT

    TM_IDENT       shift, and go to state 12
    TM_LEFT_BRACE  shift, and go to state 13


state 3

   24 NT_LEFT_TYPE: TM_INT .

    $default  reduce using rule 24 (NT_LEFT_TYPE)


state 4

   25 NT_LEFT_TYPE: TM_CHAR .

    $default  reduce using rule 25 (NT_LEFT_TYPE)


state 5

    6 NT_GLOB_ITEM: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    7             | TM_UNION . TM_IDENT TM_SEMICOL
   18 NT_LEFT_TYPE: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   19             | TM_UNION . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   20             | TM_UNION . TM_IDENT

    TM_IDENT       shift, and go to state 14
    TM_LEFT_BRACE  shift, and go to state 15


state 6

    8 NT_GLOB_ITEM: TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL
    9             | TM_ENUM . TM_IDENT TM_SEMICOL
   21 NT_LEFT_TYPE: TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   22             | TM_ENUM . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   23             | TM_ENUM . TM_IDENT

    TM_IDENT       shift, and go to state 16
    TM_LEFT_BRACE  shift, and go to state 17


state 7

   10 NT_GLOB_ITEM: TM_TYPEDEF . NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT   shift, and go to state 1
    TM_STRUCT  shift, and go to state 18
    TM_INT     shift, and go to state 3
    TM_CHAR    shift, and go to state 4
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    NT_LEFT_TYPE  go to state 21


state 8

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 22


state 9

    1 NT_WHOLE: NT_GLOB_ITEM_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


state 10

    2 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM .
    3                  | NT_GLOB_ITEM . NT_GLOB_ITEM_LIST

    TM_IDENT    shift, and go to state 1
    TM_STRUCT   shift, and go to state 2
    TM_INT      shift, and go to state 3
    TM_CHAR     shift, and go to state 4
    TM_UNION    shift, and go to state 5
    TM_ENUM     shift, and go to state 6
    TM_TYPEDEF  shift, and go to state 7

    $default  reduce using rule 2 (NT_GLOB_ITEM_LIST)

    NT_GLOB_ITEM_LIST  go to state 23
    NT_GLOB_ITEM       go to state 10
    NT_LEFT_TYPE       go to state 11


state 11

   11 NT_GLOB_ITEM: NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 27


state 12

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    5             | TM_STRUCT TM_IDENT . TM_SEMICOL
   15 NT_LEFT_TYPE: TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   17             | TM_STRUCT TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 28
    TM_SEMICOL     shift, and go to state 29

    $default  reduce using rule 17 (NT_LEFT_TYPE)


state 13

   16 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE

    TM_IDENT   shift, and go to state 1
    TM_STRUCT  shift, and go to state 18
    TM_INT     shift, and go to state 3
    TM_CHAR    shift, and go to state 4
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 38 (NT_FIELD_LIST)

    NT_LEFT_TYPE   go to state 30
    NT_FIELD_LIST  go to state 31


state 14

    6 NT_GLOB_ITEM: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
    7             | TM_UNION TM_IDENT . TM_SEMICOL
   18 NT_LEFT_TYPE: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   20             | TM_UNION TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 32
    TM_SEMICOL     shift, and go to state 33

    $default  reduce using rule 20 (NT_LEFT_TYPE)


state 15

   19 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE

    TM_IDENT   shift, and go to state 1
    TM_STRUCT  shift, and go to state 18
    TM_INT     shift, and go to state 3
    TM_CHAR    shift, and go to state 4
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 38 (NT_FIELD_LIST)

    NT_LEFT_TYPE   go to state 30
    NT_FIELD_LIST  go to state 34


state 16

    8 NT_GLOB_ITEM: TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL
    9             | TM_ENUM TM_IDENT . TM_SEMICOL
   21 NT_LEFT_TYPE: TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   23             | TM_ENUM TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 35
    TM_SEMICOL     shift, and go to state 36

    $default  reduce using rule 23 (NT_LEFT_TYPE)


state 17

   22 NT_LEFT_TYPE: TM_ENUM TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 38


state 18

   15 NT_LEFT_TYPE: TM_STRUCT . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   16             | TM_STRUCT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   17             | TM_STRUCT . TM_IDENT

    TM_IDENT       shift, and go to state 39
    TM_LEFT_BRACE  shift, and go to state 13


state 19

   18 NT_LEFT_TYPE: TM_UNION . TM_IDENT TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   19             | TM_UNION . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   20             | TM_UNION . TM_IDENT

    TM_IDENT       shift, and go to state 40
    TM_LEFT_BRACE  shift, and go to state 15


state 20

   21 NT_LEFT_TYPE: TM_ENUM . TM_IDENT TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   22             | TM_ENUM . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   23             | TM_ENUM . TM_IDENT

    TM_IDENT       shift, and go to state 41
    TM_LEFT_BRACE  shift, and go to state 17


state 21

   10 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 42


state 22

    0 $accept: NT_WHOLE $end .

    $default  accept


state 23

    3 NT_GLOB_ITEM_LIST: NT_GLOB_ITEM NT_GLOB_ITEM_LIST .

    $default  reduce using rule 3 (NT_GLOB_ITEM_LIST)


state 24

   28 NT_NAMED_RIGHT_TYPE_EXPR: TM_IDENT .

    $default  reduce using rule 28 (NT_NAMED_RIGHT_TYPE_EXPR)


state 25

   27 NT_NAMED_RIGHT_TYPE_EXPR: TM_LEFT_PAREN . NT_NAMED_RIGHT_TYPE_EXPR TM_RIGHT_PAREN

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 43


state 26

   26 NT_NAMED_RIGHT_TYPE_EXPR: TM_DEREF . NT_NAMED_RIGHT_TYPE_EXPR

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 44


state 27

   11 NT_GLOB_ITEM: NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL
   29 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . NT_PACKED_ARGUEMENT_TYPE_LIST

    TM_LEFT_PAREN   shift, and go to state 45
    TM_LEFT_SQUARE  shift, and go to state 46
    TM_SEMICOL      shift, and go to state 47

    NT_PACKED_ARGUEMENT_TYPE_LIST  go to state 48


state 28

    4 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   15 NT_LEFT_TYPE: TM_STRUCT TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE

    TM_IDENT   shift, and go to state 1
    TM_STRUCT  shift, and go to state 18
    TM_INT     shift, and go to state 3
    TM_CHAR    shift, and go to state 4
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 38 (NT_FIELD_LIST)

    NT_LEFT_TYPE   go to state 30
    NT_FIELD_LIST  go to state 49


state 29

    5 NT_GLOB_ITEM: TM_STRUCT TM_IDENT TM_SEMICOL .

    $default  reduce using rule 5 (NT_GLOB_ITEM)


state 30

   39 NT_FIELD_LIST: NT_LEFT_TYPE . NT_NAMED_RIGHT_TYPE_EXPR TM_SEMICOL NT_FIELD_LIST

    TM_IDENT       shift, and go to state 24
    TM_LEFT_PAREN  shift, and go to state 25
    TM_DEREF       shift, and go to state 26

    NT_NAMED_RIGHT_TYPE_EXPR  go to state 50


state 31

   16 NT_LEFT_TYPE: TM_STRUCT TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 51


state 32

    6 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE TM_SEMICOL
   18 NT_LEFT_TYPE: TM_UNION TM_IDENT TM_LEFT_BRACE . NT_FIELD_LIST TM_RIGHT_BRACE

    TM_IDENT   shift, and go to state 1
    TM_STRUCT  shift, and go to state 18
    TM_INT     shift, and go to state 3
    TM_CHAR    shift, and go to state 4
    TM_UNION   shift, and go to state 19
    TM_ENUM    shift, and go to state 20

    $default  reduce using rule 38 (NT_FIELD_LIST)

    NT_LEFT_TYPE   go to state 30
    NT_FIELD_LIST  go to state 52


state 33

    7 NT_GLOB_ITEM: TM_UNION TM_IDENT TM_SEMICOL .

    $default  reduce using rule 7 (NT_GLOB_ITEM)


state 34

   19 NT_LEFT_TYPE: TM_UNION TM_LEFT_BRACE NT_FIELD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 53


state 35

    8 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE TM_SEMICOL
   21 NT_LEFT_TYPE: TM_ENUM TM_IDENT TM_LEFT_BRACE . NT_ENUM_ELE_LIST TM_RIGHT_BRACE

    TM_IDENT  shift, and go to state 37

    NT_ENUM_ELE_LIST  go to state 54


state 36

    9 NT_GLOB_ITEM: TM_ENUM TM_IDENT TM_SEMICOL .

    $default  reduce using rule 9 (NT_GLOB_ITEM)


state 37

   12 NT_ENUM_ELE_LIST: TM_IDENT .
   13                 | TM_IDENT . TM_COMMA NT_ENUM_ELE_LIST

    TM_COMMA  shift, and go to state 55

    $default  reduce using rule 12 (NT_ENUM_ELE_LIST)


state 38

   22 NT_LEFT_TYPE: TM_ENUM TM_LEFT_BRACE NT_ENUM_ELE_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 56


state 39

   15 NT_LEFT_TYPE: TM_STRUCT TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   17             | TM_STRUCT TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 57

    $default  reduce using rule 17 (NT_LEFT_TYPE)


state 40

   18 NT_LEFT_TYPE: TM_UNION TM_IDENT . TM_LEFT_BRACE NT_FIELD_LIST TM_RIGHT_BRACE
   20             | TM_UNION TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 58

    $default  reduce using rule 20 (NT_LEFT_TYPE)


state 41

   21 NT_LEFT_TYPE: TM_ENUM TM_IDENT . TM_LEFT_BRACE NT_ENUM_ELE_LIST TM_RIGHT_BRACE
   23             | TM_ENUM TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 59

    $default  reduce using rule 23 (NT_LEFT_TYPE)


state 42

   10 NT_GLOB_ITEM: TM_TYPEDEF NT_LEFT_TYPE NT_NAMED_RIGHT_TYPE_EXPR . TM_SEMICOL
   29 NT_NAMED_RIGHT_TYPE_EXPR: NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . NT_PACKED_ARGUEMENT_TYPE_LIST

    TM_LEFT_PAREN   shift, and go to state 45
    TM_LEFT_SQUARE  shift, and go to state 46
    TM_SEMICOL      shift, and go to state 60

    NT_PACKED_ARGUEMENT_TYPE_LIST  go to state 48


state 43

   27 NT_NAMED_RIGHT_TYPE_EXPR: TM_LEFT_PAREN NT_NAMED_RIGHT_TYPE_EXPR . TM_RIGHT_PAREN
   29                         | NT_NAMED_RIGHT_TYPE_EXPR . TM_LEFT_SQUARE TM_NAT TM_RIGHT_SQUARE
   30                         | NT_NAMED_RIGHT_TYPE_EXPR . NT_PACKED_ARGUEMENT_TYPE_LIST

    TM_LEFT_PAREN   shift, and go to state 45
    TM_RIGHT_PAREN  shift, and go to state 61
    TM_LEFT_SQUARE  shift, and go to state 46

    NT_PACKED_ARGUEMENT_TYPE_LIST  go to state 48


state 44
